# p2p-ws-13-14

./: .gitignore  P2P.cabal  P2P.hs  README.md  protocol.md  tasks.md
P2P/: Client.hs  Networking.hs  Server.hs
client/: Client.hs  client.cabal
golang/client/: client.go
golang/client/protocol/: compression.go  package.go  packet.go  protocol.go  protocol_test.go
golang/gostarter/: gensvg.bat  signal_unix.go  signal_windows.go  starter.go
golang/peer/: address.go  connection.go  console.go  main.go  marshalling.go  message.go  node.go  peer.go
golang/peer/protocol/: connection.go  marshalling.go  message.go  node.go
golang/server/: server.go
golang/starter/: starter.go  starter_windows.go
graph/: data.js  graph.css  graph.js  graph1.html  graph2.html
haskell/: P2P.cabal
haskell/src/: Client.hs  Server.hs
haskell/src/P2P/: Commands.hs  Compression.hs  Events.hs  GUI.hs  Marshalling.hs  Messages.hs  Networking.hs  Nodes.hs  Protocol.hs
server/: Server.hs  server.cabal
src/: Client.hs  Server.hs
src/P2P/: Events.hs  GUI.hs  Networking.hs
wwwroot/: index.html  index.slim
