name:                p2p
version:             0.0.1.0
synopsis:            P2P TU Darmstadt course
License:             BSD3
author:              Arne Link, Lars Fritsche, ...
category:            Network
build-type:          Simple
cabal-version:       >=1.8

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
-- license:             

-- The file containing the license text.
-- license-file:        LICENSE


-- An email address to which users can send suggestions, bug reports, and 
-- patches.
-- maintainer:          

-- Data-dir:            wwwroot
-- Data-files:          css/*.css,
--                      js/*.js,
--                      *.html
                     
Library
  hs-source-dirs:      src
  
  -- Modules included in this library, other than Main.
  exposed-modules:     P2P.Networking, P2P.Events, P2P.GUI, P2P.Protocol,
                       P2P.Commands, P2P.Messages
  
  build-depends:       base ==4.6.*, network ==2.4.1.2, threepenny-gui ==0.4.*,
                       pipes ==4.0.*, pipes-bytestring ==1.0.*,
                       network-simple ==0.3.*, utf8-string,
                       optparse-applicative, bytestring ==0.10.0.2, binary-strict,
                       text, lz4 ==0.2.2, containers, lens, mtl
 
Executable server
    -- .hs or .lhs file containing the Main module.
    main-is:             Server.hs
    
    hs-source-dirs:      src
   
    -- Other library packages from which modules are imported.
    build-depends:       p2p, pipes ==4.0.*, pipes-bytestring ==1.0.*, utf8-string,
                         optparse-applicative, bytestring ==0.10.0.2, base ==4.6.*, network ==2.4.1.2,
                         network-simple ==0.3.*, threepenny-gui ==0.4.*, base ==4.6.*, lz4 ==0.2.2,
                         text, containers, lens, mtl
    
Executable client
    -- .hs or .lhs file containing the Main module.
    main-is:             Client.hs
    
    hs-source-dirs:      src
    
    -- Other library packages from which modules are imported.
    build-depends:       p2p, pipes ==4.0.*, pipes-bytestring ==1.0.*, utf8-string,
                         optparse-applicative, bytestring ==0.10.0.2, network ==2.4.1.2,
                         network-simple ==0.3.*, threepenny-gui ==0.4.*, base ==4.6.*,
                         lz4 ==0.2.2, text, containers, lens, mtl
