name:                p2p
version:             0.0.1.0
synopsis:            P2P TU Darmstadt course
License:             BSD3
author:              Arne Link, Lars Fritsche, ...
category:            Network
build-type:          Simple
cabal-version:       >=1.8

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
-- license:             

-- The file containing the license text.
-- license-file:        LICENSE


-- An email address to which users can send suggestions, bug reports, and 
-- patches.
-- maintainer:          
                     
Library
  hs-source-dirs:      src
  
  -- Modules included in this library, other than Main.
  exposed-modules:     P2P.Protocol, P2P.Marshalling, P2P.Messages, P2P.Nodes
  
  build-depends:       base ==4.6.*, network ==2.4.1.2, monad-loops,
                       network-simple ==0.3.*, utf8-string, stm, uuid,
                       optparse-applicative, bytestring ==0.10.0.2, binary-strict, 
                       containers, lens, mtl, text, lz4 ==0.2.2, split
Executable server
    -- .hs or .lhs file containing the Main module.
    main-is:             Server.hs
    
    hs-source-dirs:      src
   
    -- Other library packages from which modules are imported.
    build-depends:       p2p, pipes ==4.0.*, utf8-string, monad-loops,
                         optparse-applicative, bytestring ==0.10.0.2, base ==4.6.*, network ==2.4.1.2,
                         network-simple ==0.3.*, threepenny-gui ==0.4.*, stm, lz4 ==0.2.2,
                         text, containers, lens, mtl, lz4 ==0.2.2, uuid, split    
